[FE-1]-add wrapper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,9 @@
     "outDir": "./dist",
     "esModuleInterop": true,
     "paths": {
-      "react-easyrocket": ["src/libs/react-easyrocket/src/index.ts"],
       "src/*": ["src/*"]
     }
   },
-  "include": ["src", "vite.config.ts", "manifest.json"],
-  "exclude": ["node_modules", "dist", "src/libs/react-easyrocket/**"]
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
