--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --ignore-pattern 'src/libs/react-easyrocket/**' --fix"
   },
   "dependencies": {
+    "@react-input/mask": "^1.2.3",
     "@tanstack/react-query": "~5.66.0",
     "axios": "~1.9.0",
     "clsx": "~2.1.1",
@@ -19,7 +20,7 @@
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-hook-form": "~7.54.2",
-    "react-router-dom": "^7.6.1",
+    "react-input-mask": "~3.0.0-alpha.2",
     "yup": "~1.6.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@tanstack/react-query-devtools": "~5.66.0",
     "@types/react": "~18.3.18",
     "@types/react-dom": "~18.3.5",
+    "@types/react-input-mask": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "~7.14.1",
     "@typescript-eslint/parser": "~7.14.1",
     "@vitejs/plugin-react": "~4.3.4",
