--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host --port 5174",
-    "build": "npm run build:app",
-    "build:app": "npm install && tsc && vite build && npx tsc --project ./tsconfig.sw.json",
-    "preview": "vite preview --host",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint . --ignore-pattern 'src/libs/react-easyrocket/**' --fix",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --ignore-pattern 'src/libs/react-easyrocket/**' --fix"
   },
