--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "vite-plugin-image-optimizer": "~1.1.8",
     "vite-plugin-preload": "~0.4.2",
     "vite-plugin-purgecss": "~0.2.12",
+    "vite-plugin-sitemap": "^0.8.2",
+    "vite-plugin-svgr": "^4.5.0",
     "vite-plugin-webfont-dl": "~3.10.4",
     "vite-tsconfig-paths": "~5.1.4"
   },
