--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typescript": "~5.6.2",
     "vite": "~6.3.5",
     "vite-plugin-compression": "~0.5.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-image-optimizer": "~1.1.8",
     "vite-plugin-preload": "~0.4.2",
     "vite-plugin-purgecss": "~0.2.12",
